# VTL

./: 1.c  CMakeLists.txt  README.md
API/: CMakeLists.txt
Backend/: CMakeLists.txt
GUI/: CMakeLists.txt
वाचकम्/: CMakeLists.txt  वाचकम्.cpp
