file(GLOB VTL_GUI_SRC
	"*.cpp"
)
add_executable(vtleditor ${VTL_GUI_SRC})
if(NOT DEFINED WXCONFIG)
	message( SEND_ERROR "WXCONFIG?")
endif()
execute_process(COMMAND ${WXCONFIG} --cxxflags OUTPUT_VARIABLE WXCXXFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND ${WXCONFIG} --libs OUTPUT_VARIABLE WXLIBFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND ${WXCONFIG} --gl-libs OUTPUT_VARIABLE WXGLFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
set(WXWINDOWS_USE_GL 1)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${WXCXXFLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${WXLIBFLAGS} ${WXGLFLAGS} -lOpenGL -lGLU")
target_link_libraries(vtleditor vtl)
